fix dialog z-index

--- a/src/css/_dialog.scss
+++ b/src/css/_dialog.scss
@@ -10,7 +10,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 16;
+  z-index: 110;
   padding: 64px;
   display: flex;
   align-items: center;
@@ -27,6 +27,7 @@
   display: flex;
   flex-direction: column;
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
+  z-index: 32;
 }
 
 .dialog__header {
@@ -64,6 +65,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: -1;
+  z-index: 16;
   background: rgba(0, 0, 0, 0.5);
 }
